--- a/example/package.json
+++ b/example/package.json
@@ -10,6 +10,7 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/datetimepicker": "^3.5.2",
     "@react-native-community/slider": "^3.0.0",
     "@rjsf/core": "^2.2.0",
     "react": "16.11.0",
