--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "rjsf-native",
-  "version": "1.0.13",
+  "version": "1.1.0",
   "main": "dist/index.js",
   "module": "dist/rjsf-native.esm.js",
   "typings": "dist/index.d.ts",
@@ -17,11 +17,7 @@
     "prepare": "tsdx build",
     "prepublish": "yarn build"
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "tsdx lint"
-    }
-  },
+
   "peerDependencies": {
     "@react-native-community/slider": "*",
     "@rjsf/core": "^2.0.0",
@@ -29,19 +25,19 @@
     "react-native": ">=0.60.0"
   },
   "devDependencies": {
-    "@react-native-community/datetimepicker": "^3.5.2",
-    "@react-native-community/eslint-config": "^2.0.0",
-    "@react-native-community/slider": "^3.0.0",
-    "@rjsf/core": "^2.2.0",
-    "@rollup/plugin-image": "^2.0.5",
-    "@types/json-schema": "^7.0.5",
-    "@types/react": "^16.9.41",
-    "@types/react-native": "^0.62.16",
-    "husky": "^4.2.5",
+    "@react-native-community/datetimepicker": "^6.1.3",
+    "@react-native-community/eslint-config": "^3.0.2",
+    "@react-native-community/slider": "^4.2.2",
+    "@rjsf/core": "^4.2.0",
+    "@rollup/plugin-image": "^2.1.1",
+    "@types/json-schema": "^7.0.11",
+    "@types/react": "^18.0.12",
+    "@types/react-native": "^0.67.8",
+    "husky": "^8.0.1",
     "rimraf": "^3.0.2",
-    "tsdx": "^0.13.2",
-    "tslib": "^2.0.0",
-    "typescript": "^3.9.6"
+    "tsdx": "^0.14.1",
+    "tslib": "^2.4.0",
+    "typescript": "^4.7.3"
   },
   "keywords": [
     "react-native",
@@ -53,5 +49,12 @@
     "form",
     "react",
     "rjsf-native"
-  ]
+  ],
+  "dependencies": {
+    "intl": "^1.2.5",
+    "react-intl": "^6.0.4",
+    "react-native-get-random-values": "^1.8.0",
+    "react-native-paper": "^4.12.1",
+    "react-native-paper-dates": "^0.8.7"
+  }
 }
